update main elements in pages from gov.uk pages

--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -49,99 +49,126 @@
 </header>
 
 <div class="govuk-width-container">
-    <main class="govuk-main-wrapper" id="main-content" role="main">
+    <main id="content" role="main" class=" govuk-main-wrapper" lang="cy">
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
-                <div class="govuk-grid-column-two-thirds govuk-!-padding-left-0">
-                    <h1 class="govuk-heading-xl">
-                        Chwiliwch am dystysgrif ynni
-                    </h1>
-                    <p class="govuk-body">
-                        Defnyddiwch y gwasanaeth hwn i chwilio am dystysgrifau ynni ac adroddiadau ar argymhellion ar gyfer eiddo yng Nghymru, Lloegr a Gogledd Iwerddon.
-                    </p>
+            <div class="govuk-grid-column-two-thirds">
 
-                    <p class="govuk-body">Mae hyn yn cynnwys:</p>
-                    <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-5">
-                        <li>tystysgrifau perfformiad ynni (EPCs)</li>
-                        <li>tystysgrifau ynni i’w harddangos (DECs) i adeiladau cyhoeddus</li>
-                        <li>tystysgrifau ac adroddiadau ar archwiliadau systemau aerdymheru</li>
-                    </ul>
+                <div class="gem-c-title govuk-!-margin-top-0 govuk-!-margin-bottom-8">
 
-                    <div class="govuk-inset-text">
-                        Mae’r gwasanaeth hwn ar gael hefyd mewn <a class="govuk-link" href="find-an-energy-certificate.html">Saesneg (English)</a>.
-                    </div>
-
-                    <a
-                        href="https://find-energy-certificate-integration.digital.communities.gov.uk/find-a-certificate/type-of-property?lang=cy"
-                        role="button"
-                        draggable="false"
-                        class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"
-                        data-module="govuk-button">
-                        Dechreuwch nawr
-                        <svg
-                            class="govuk-button__start-icon"
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="17.5"
-                            height="19"
-                            viewBox="0 0 33 40"
-                            role="presentation"
-                            focusable="false">
-                            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-                        </svg>
-                    </a>
-
-                    <h2 class="govuk-heading-m">
-                        Cyn ichi ddechrau
-                    </h2>
-
-                    <p class="govuk-body">
-                        Os nad oes gan eich eiddo dystysgrif ynni neu os yw’r dystysgrif wedi dod i ben, fe allwch chi <a class="govuk-link" href="sicrhau-tystysgrif-ynni-newydd.html"> sicrhau tystysgrif ynni newydd</a>
-                    </p>
-
-                    <p class="govuk-body">
-                        Os oes arnoch angen rhagor o gymorth i chwilio am dystysgrif ynni neu adroddiad, cysylltwch â ni ar <a class="govuk-link" href="mailto:mhclg.digital-services@communities.gov.uk?subject=EPB - ">mhclg.digital-services@communities.gov.uk</a>, neu ffoniwch ein desg gymorth ar 020 3829 0748 (dydd Llun i ddydd Gwener, 9am - 5pm).
-                    </p>
-
-                    <p class="govuk-body">
-                        Ar gyfer eiddo yn yr Alban, defnyddiwch <a class="govuk-link" href="https://www.scottishepcregister.org.uk/">Wasanaeth tystysgrifau ynni yr Alban</a>.
-                    </p>
+                    <h1 class="gem-c-title__text govuk-heading-xl">
+                        Dod o hyd i dystysgrif ynni
+                        </h1>
                 </div>
-                <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
-                    <aside class="epc-blue-top" role="complementary">
-                        <h2 class="govuk-heading-m" id="related_content-title">
-                            Cynnwys perthynol
-                        </h2>
-                        <nav role="navigation" aria-labelledby="subsection-title">
-                            <ul class="govuk-list govuk-body">
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/buy-sell-your-home/energy-performance-certificates">
-                                        Canllawiau ar EPCs wrth brynu neu werthu’ch cartref
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/energy-performance-certificate-commercial-property/exemptions">
-                                        Esemptiadau rhag EPCs i eiddo busnesau
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/check-energy-performance-public-building">
-                                        Canllawiau ar ba adeiladau sydd angen DEC
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/get-your-air-conditioning-system-inspected">
-                                        Pryd mae angen i systemau aerdymheru gael eu harchwilio
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </aside>
+            </div>
+            <div class="article-container group govuk-grid-column-two-thirds">
+                <div class="content-block">
+                    <div class="inner">
+
+                        <section class="intro">
+                            <div class="get-started-intro">
+
+                                <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
+
+                                    <p>Dod o hyd i dystysgrif ynni ar gyfer eiddo yng Nghymru, Lloegr neu Ogledd Iwerddon. Mae hyn yn cynnwys cartrefi, eiddo busnes ac adeiladau cyhoeddus.</p>
+
+                                    <p>
+                                        Mae’r dudalen hon ar gael hefyd 
+                                        <a href="find-an-energy-certificate.html">yn Saesneg (English)</a>
+                                        .
+                                    </p>
+
+                                    <div role="note" aria-label="Information" class="application-notice info-notice">
+                                        <p>
+                                            Mae yna wasanaeth gwahanol i 
+                                            <a rel="external" href="https://www.scottishepcregister.org.uk/">ddod o hyd i dystysgrif ynni ar gyfer eiddo yn yr Alban</a>
+                                            .
+                                        </p>
+                                    </div>
+
+                                    <p>Gallwch ddefnyddio’r gwasanaeth hwn i ddod o hyd i’r canlynol:</p>
+
+                                    <ul>
+                                        <li>tystysgrif perfformiad ynni (EPC)</li>
+                                        <li>tystysgrif ynni i’w harddangos (DEC) ar gyfer adeilad cyhoeddus</li>
+                                        <li>tystysgrif ac adroddiad arolygu aerdymheru</li>
+                                    </ul>
+
+                                    <div role="note" aria-label="Information" class="application-notice info-notice">
+                                        <p>
+                                            Os nad oes gan eich eiddo dystysgrif ynni neu os yw wedi dod i ben, gallwch 
+                                            <a href="sicrhau-tystysgrif-ynni-newydd.html">gael tystysgrif ynni newydd</a>
+                                            .
+                                        </p>
+                                    </div>
+
+                                    <p>Gallwch chwilio am dystysgrif yn ôl cod post, enw stryd a thref, neu rif tystysgrif.</p>
+
+                                </div>
+                            </div>
+                            <p id="get-started" class="get-started group">
+
+                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-integration.digital.communities.gov.uk/find-a-certificate/type-of-property?lang=cy">
+                                        Dechrau nawr
+                                        
+                                    <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+                                        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+                                    </svg>
+                                </a>
+
+                            </p>
+                        </section>
+
+                        <section class="more">
+
+                            <div id="what-you-need-to-know">
+                                <h2 class="gem-c-heading gem-c-heading--font-size-27 govuk-!-margin-bottom-4">Beth mae angen i chi wybod</h2>
+
+                                <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
+
+                                    <h3 id="cael-help-i-ddod-o-hyd-i-dystysgrif-ynni">Cael help i ddod o hyd i dystysgrif ynni</h3>
+
+                                    <p>Os oes arnoch angen help i ddod o hyd i dystysgrif neu adroddiad ynni, cysylltwch â’r Adran Codi’r Gwastad, Tai a Chymunedau (DLUHC).</p>
+
+                                    <div class="contact">
+                                        <p>
+                                            <a href="mailto:mhclg.digital-services@communities.gov.uk">mhclg.digital-services@communities.gov.uk</a>
+                                            <br>
+
+                                            Ffôn: 020 3829 0748
+                                            <br>
+
+                                            Dydd Llun i ddydd Gwener, 9am i 5pm
+                                            <br>
+                                            <a href="/costau-galwadau">Gwybodaeth am daliadau am alwadau</a>
+                                        </p>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </section>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="govuk-grid-column-one-third">
+
+                <div class="gem-c-contextual-sidebar">
+                </div>
+
+            </div>
+
+            <div class="govuk-grid-column-two-thirds">
+
+                <div class="gem-c-contextual-footer">
                 </div>
 
             </div>
         </div>
-
     </main>
+
 </div>
 
 <footer class="govuk-footer" role="contentinfo">
