--- a/sicrhau-tystysgrif-ynni-newydd.html
+++ b/sicrhau-tystysgrif-ynni-newydd.html
@@ -47,105 +47,145 @@
 </header>
 
 <div class="govuk-width-container">
-    <main class="govuk-main-wrapper" id="main-content" role="main">
+    <main id="content" role="main" class=" govuk-main-wrapper" lang="cy">
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
-                <div class="govuk-grid-column-two-thirds govuk-!-padding-left-0">
-                    <h1 class="govuk-heading-xl">
-                        Sicrhau tystysgrif ynni newydd
-                    </h1>
-                    <p class="govuk-body">
-                        Mae angen ichi drefnu asesiad eiddo er mwyn sicrhau:
-                    </p>
+            <div class="govuk-grid-column-two-thirds">
 
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li>
-                            tystysgrif perfformiad ynni (EPC) newydd
-                        </li>
-                        <li>
-                            tystysgrif ynni arddangos (DEC) newydd i adeilad cyhoeddus
-                        </li>
-                        <li>
-                            tystysgrif ac adroddiad newydd ar archwiliad aerdymheru
-                        </li>
-                    </ul>
+                <div class="gem-c-title govuk-!-margin-top-0 govuk-!-margin-bottom-8">
 
-                    <p class="govuk-body">
-                        Defnyddiwch y gwasanaeth hwn i ddod o hyd i asesydd cymwysedig yng Nghymru, Lloegr neu Ogledd Iwerddon
-                    </p>
-
-                    <p class="govuk-body">
-                        Mae cost asesiad yn amrywio yn ôl yr asesydd ac yn ôl maint yr eiddo
-                    </p>
-
-                    <div class="govuk-inset-text">
-                        Mae’r gwasanaeth hwn ar gael hefyd mewn <a class="govuk-link" href="getting-a-new-energy-certificate.html">Saesneg (English)</a>.
-                    </div>
-
-                    <a
-                        href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/find-an-assessor/type-of-property?lang=cy"
-                        role="button"
-                        draggable="false"
-                        class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"
-                        data-module="govuk-button">
-                        Dechrau nawr
-                        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
-                            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-                        </svg>
-                    </a>
-
-                    <h2 class="govuk-heading-m">
-                        Cyn ichi ddechrau
-                    </h2>
-
-                    <p class="govuk-body">
-                        Fe allwch chi <a class="govuk-link" href="chwiliwch-am-dystysgrif-ynni.html"> wirio a oes gan yr eiddo dystysgrif ynni ddilys yn barod</a>.
-                    </p>
-
-                    <p class="govuk-body">
-                        Os oes arnoch angen rhagor o gymorth i ddod o hyd i asesydd, cysylltwch â ni ar <a class="govuk-link" href="mailto:mhclg.digital-services@communities.gov.uk?subject=EPB - ">mhclg.digital-services@communities.gov.uk</a>, neu ffoniwch ein desg gymorth ar 020 3829 0748 (dydd Llun i ddydd Gwener, 9am - 5pm).
-                    </p>
-
-                    <p class="govuk-body">
-                        Ar gyfer eiddo yn yr Alban, defnyddiwch <a class="govuk-link" href="https://www.scottishepcregister.org.uk/">Wasanaeth tystysgrifau ynni yr Alban</a>.
-                    </p>
+                    <h1 class="gem-c-title__text govuk-heading-xl">
+                        Cael tystysgrif ynni newydd
+                        </h1>
                 </div>
-                <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
-                    <aside class="epc-blue-top" role="complementary">
-                        <h2 class="govuk-heading-m" id="related_content-title">
-                            Cynnwys perthynol
-                        </h2>
-                        <nav role="navigation" aria-labelledby="subsection-title">
-                            <ul class="govuk-list govuk-body">
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/buy-sell-your-home/energy-performance-certificates">
-                                        Canllawiau ar EPCs wrth brynu neu werthu’ch cartref
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/energy-performance-certificate-commercial-property/exemptions">
-                                        Esemptiadau rhag EPCs i eiddo busnesau
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/check-energy-performance-public-building">
-                                        Canllawiau ar ba adeiladau sydd angen DEC
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="govuk-link" href="https://www.gov.uk/get-your-air-conditioning-system-inspected">
-                                        Pryd mae angen i systemau aerdymheru gael eu harchwilio
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </aside>
+            </div>
+            <div class="article-container group govuk-grid-column-two-thirds">
+                <div class="content-block">
+                    <div class="inner">
+
+                        <section class="intro">
+                            <div class="get-started-intro">
+
+                                <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
+
+                                    <p>I gael tystysgrif ynni newydd ar gyfer eich cartref, eich eiddo busnes neu’ch adeilad cyhoeddus, mae angen ichi ei asesu.</p>
+
+                                    <div role="note" aria-label="Information" class="application-notice info-notice">
+                                        <p>
+                                            Mae’r dudalen hon ar gael hefyd 
+                                            <a href="getting-a-new-energy-certificate.html">yn Saesneg (English)</a>
+                                            .
+                                        </p>
+                                    </div>
+
+                                    <p>Trefnu asesiad eiddo i gael un newydd o’r rhain:</p>
+
+                                    <ul>
+                                        <li>tystysgrif perfformiad ynni (EPC)</li>
+                                        <li>tystysgrif ynni i’w harddangos (DEC) ar gyfer adeilad cyhoeddus</li>
+                                        <li>tystysgrif ac adroddiad arolygu aerdymheru</li>
+                                    </ul>
+
+                                    <p>Mae cost asesiad yn amrywio yn ôl asesydd a maint yr eiddo.</p>
+
+                                    <p>Ar ôl yr asesiad, bydd yr asesydd yn rhoi copi digidol o’ch tystysgrif i chi.</p>
+
+                                    <p>Gallwch hefyd weld neu argraffu tystysgrif ynni sy’n bodoli eisoes.</p>
+
+                                    <h2 id="dod-o-hyd-i-asesydd">Dod o hyd i asesydd</h2>
+
+                                    <p>Dod o hyd i asesydd achrededig ar gyfer eich cartref, eich eiddo busnes neu’ch adeilad cyhoeddus. Gallwch ddefnyddio’r gwasanaeth hwn yng Nghymru, Lloegr neu Ogledd Iwerddon.</p>
+
+                                    <div role="note" aria-label="Information" class="application-notice info-notice">
+                                        <p>
+                                            Mae yna broses wahanol os ydych am 
+                                            <a rel="external" href="https://www.scottishepcregister.org.uk">ddod o hyd i asesydd achrededig yn yr Alban</a>
+                                            .
+                                        </p>
+                                    </div>
+
+                                    <p>Pan fyddwch yn dod o hyd i asesydd:</p>
+
+                                    <ul>
+                                        <li>cysylltu â nhw’n uniongyrchol i drefnu iddyn nhw weld yr eiddo</li>
+                                        <li>gwirio eu bod yn rhan o gynllun achrededig</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                            <p id="get-started" class="get-started group">
+
+                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/find-an-assessor/type-of-property?lang=cy">
+                                        Dechrau nawr
+                                        
+                                    <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+                                        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+                                    </svg>
+                                </a>
+
+                            </p>
+                        </section>
+
+                        <section class="more">
+
+                            <div id="what-you-need-to-know">
+                                <h2 class="gem-c-heading gem-c-heading--font-size-27 govuk-!-margin-bottom-4">Beth mae angen i chi wybod</h2>
+
+                                <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
+
+                                    <p>
+                                        Gallwch 
+                                        <a href="chwiliwch-am-dystysgrif-ynni.html">wirio a oes gan yr eiddo dystysgrif ynni ddilys eisoes</a>
+                                        .
+                                    </p>
+
+                                    <h3 id="cael-help-i-ddod-o-hyd-i-asesydd-ynni">Cael help i ddod o hyd i asesydd ynni</h3>
+
+                                    <p>I gael help i ddod o hyd i asesydd, cysylltwch â’r Adran Codi’r Gwastad, Tai a Chymunedau (DLUHC).</p>
+
+                                    <div class="contact">
+                                        <p>
+                                            <a href="mailto:mhclg.digital-services@communities.gov.uk">mhclg.digital-services@communities.gov.uk</a>
+                                            <br>
+
+                                            Ffôn: 020 3829 0748
+                                            <br>
+
+                                            Dydd Llun i ddydd Gwener, 9am i 5pm
+                                            <br>
+                                            <a href="/costau-galwadau">Gwybodaeth am daliadau am alwadau</a>
+                                        </p>
+                                    </div>
+
+                                    <h3 id="os-ydych-chin-anfodlon-ar-yr-asesiad">Os ydych chi’n anfodlon ar yr asesiad</h3>
+
+                                    <p>Gallwch gwyno wrth yr asesydd yn uniongyrchol. Os ydych yn dal yn anfodlon, gallwch gysylltu â chynllun achredu’r asesydd. Bydd eu manylion cysylltu nhw ar y dystysgrif perfformiad ynni.</p>
+
+                                </div>
+                            </div>
+
+                        </section>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="govuk-grid-column-one-third">
+
+                <div class="gem-c-contextual-sidebar">
+                </div>
+
+            </div>
+
+            <div class="govuk-grid-column-two-thirds">
+
+                <div class="gem-c-contextual-footer">
                 </div>
 
             </div>
         </div>
-
     </main>
+
 </div>
 
 <footer class="govuk-footer" role="contentinfo">
