--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -50,100 +50,178 @@
 </header>
 
 <div class="govuk-width-container">
-  <main class="govuk-main-wrapper" id="main-content" role="main">
-    <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <div class="govuk-grid-column-two-thirds govuk-!-padding-left-0">
-      <h1 class="govuk-heading-xl">
-        Find an energy certificate
-      </h1>
-      <p class="govuk-body">
-        Use this service to find energy certificates and recommendation reports for properties in England, Wales and Northern Ireland.
-      </p>
+  <main id="content" role="main" class=" govuk-main-wrapper">
+      <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
 
-      <p class="govuk-body">This includes:</p>
-      <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-5">
-        <li>energy performance certificates (EPCs)</li>
-        <li>display energy certificates (DECs) for public buildings</li>
-        <li>air conditioning inspection certificates and reports</li>
-      </ul>
+              <div class="gem-c-title govuk-!-margin-top-0 govuk-!-margin-bottom-8">
 
-      <p class="govuk-body">
-        <div class="govuk-inset-text">
-          This service is also available in <a class="govuk-link" href="chwiliwch-am-dystysgrif-ynni.html">Welsh (Cymraeg)</a>.
-        </div>
-      </p>
+                  <h1 class="gem-c-title__text govuk-heading-xl">
+                      Find an energy certificate
+                    </h1>
+              </div>
+          </div>
+          <div class="article-container group govuk-grid-column-two-thirds">
+              <div class="content-block">
+                  <div class="inner">
 
-      <a
-        href="https://find-energy-certificate-integration.digital.communities.gov.uk/find-a-certificate/type-of-property"
-        role="button"
-        draggable="false"
-        class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"
-        data-module="govuk-button">
-          Start now
-        <svg
-          class="govuk-button__start-icon"
-          xmlns="http://www.w3.org/2000/svg"
-          width="17.5"
-          height="19"
-          viewBox="0 0 33 40"
-          role="presentation"
-          focusable="false">
-          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-        </svg>
-      </a>
+                      <section class="intro">
+                          <div class="get-started-intro">
 
-      <h2 class="govuk-heading-m">
-        Before you start
-      </h2>
+                              <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
-      <p class="govuk-body">
-        If your property does not have an energy certificate or the certificate is expired, you can <a class="govuk-link" href="getting-a-new-energy-certificate.html"> get a new energy certificate.</a>
-      </p>
+                                  <p>Find an energy certificate for a property in England, Wales or Northern Ireland. This includes homes, business properties and public buildings.</p>
 
-      <p class="govuk-body">
-        If you need additional support to find an energy certificate or report, contact us on <a class="govuk-link" href="mailto:mhclg.digital-services@communities.gov.uk?subject=EPB - ">mhclg.digital-services@communities.gov.uk</a>, or call our helpdesk on 020 3829 0748 (Monday to Friday, 9am - 5pm).
-      </p>
+                                  <p>
+                                      This service is also available 
+                                      <a href="chwiliwch-am-dystysgrif-ynni.html">in Welsh (Cymraeg)</a>
+                                      .
+                                  </p>
 
-      <p class="govuk-body">
-        For properties in Scotland, use the <a class="govuk-link" href="https://www.scottishepcregister.org.uk/">Scottish energy certificate service</a>.
-      </p>
-    </div>
-      <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
-  <aside class="epc-blue-top" role="complementary">
-    <h2 class="govuk-heading-m" id="related_content-title">
-      Related content
-    </h2>
-    <nav role="navigation" aria-labelledby="subsection-title">
-      <ul class="govuk-list govuk-body">
-        <li>
-          <a class="govuk-link" href="https://www.gov.uk/buy-sell-your-home/energy-performance-certificates">
-            Guidance on EPCs when buying or selling your home
-          </a>
-        </li>
-        <li>
-          <a class="govuk-link" href="https://www.gov.uk/energy-performance-certificate-commercial-property/exemptions">
-            EPC exemptions for business properties
-          </a>
-        </li>
-        <li>
-          <a class="govuk-link" href="https://www.gov.uk/check-energy-performance-public-building">
-            Guidance on which properties need a DEC
-          </a>
-        </li>
-        <li>
-          <a class="govuk-link" href="https://www.gov.uk/get-your-air-conditioning-system-inspected">
-            When air conditioning system inspections are required
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </aside>
-</div>
+                                  <div role="note" aria-label="Information" class="application-notice info-notice">
+                                      <p>
+                                          There’s a different service to 
+                                          <a rel="external" href="https://www.scottishepcregister.org.uk/">find an energy certificate for properties in Scotland</a>
+                                          .
+                                      </p>
+                                  </div>
 
-  </div>
-</div>
+                                  <p>You can use this service to find an existing:</p>
 
+                                  <ul>
+                                      <li>energy performance certificate (EPC)</li>
+                                      <li>display energy certificate (DEC) for a public building</li>
+                                      <li>air conditioning inspection certificate and report</li>
+                                  </ul>
+
+                                  <div role="note" aria-label="Information" class="application-notice info-notice">
+                                      <p>
+                                          If your property does not have an energy certificate or it has expired, you can 
+                                          <a href="getting-a-new-energy-certificate.html">get a new energy certificate</a>
+                                          .
+                                      </p>
+                                  </div>
+
+                                  <p>You can search for a certificate by postcode, street name and town, or certificate number.</p>
+
+                              </div>
+                          </div>
+                          <p id="get-started" class="get-started group">
+
+                              <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-integration.digital.communities.gov.uk/find-a-certificate/type-of-property">
+                                    Start now
+                                    
+                                  <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+                                      <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+                                  </svg>
+                              </a>
+
+                          </p>
+                      </section>
+
+                      <section class="more">
+
+                          <div id="what-you-need-to-know">
+                              <h2 class="gem-c-heading gem-c-heading--font-size-27 govuk-!-margin-bottom-4">What you need to know</h2>
+
+                              <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
+
+                                  <h3 id="get-help-finding-an-energy-certificate">Get help finding an energy certificate</h3>
+
+                                  <p>
+                                      If you need help finding an energy certificate or report, contact the Department for Levelling Up, Housing and Communities (
+                                      <abbr title="Department for Levelling Up, Housing and Communities">DLUHC</abbr>
+                                      ).
+                                  </p>
+
+                                  <div class="contact">
+                                      <p>
+                                          <a href="mailto:mhclg.digital-services@communities.gov.uk">mhclg.digital-services@communities.gov.uk</a>
+                                          <br>
+
+                                          Telephone: 020 3829 0748
+                                          <br>
+
+                                          Monday to Friday, 9am to 5pm
+                                          <br>
+                                          <a href="/call-charges">Find out more about call charges</a>
+                                      </p>
+                                  </div>
+
+                              </div>
+                          </div>
+
+                      </section>
+
+                  </div>
+              </div>
+
+          </div>
+
+          <div class="govuk-grid-column-one-third">
+
+              <div class="gem-c-contextual-sidebar">
+
+                  <div class="gem-c-related-navigation">
+
+                      <h2 id="related-nav-related_items-c49ac6ac" class="gem-c-related-navigation__main-heading" data-track-count="sidebarRelatedItemSection">
+                              Related content
+                            </h2>
+
+                      <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-related_items-c49ac6ac" data-module="gem-toggle">
+
+                          <ul class="gem-c-related-navigation__link-list" data-module="gem-track-click">
+
+                              <li class="gem-c-related-navigation__link">
+                                  <a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--sidebar  govuk-link gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked" data-track-action="1.1 Related content" data-track-label="/get-new-energy-certificate" data-track-options='{"dimension28":"3","dimension29":"Get a new energy certificate"}' href="/get-new-energy-certificate">Get a new energy certificate</a>
+                              </li>
+                              <li class="gem-c-related-navigation__link">
+                                  <a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--sidebar  govuk-link gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked" data-track-action="1.2 Related content" data-track-label="/buy-sell-your-home" data-track-options='{"dimension28":"3","dimension29":"Buying or selling your home"}' href="/buy-sell-your-home">Buying or selling your home</a>
+                              </li>
+                              <li class="gem-c-related-navigation__link">
+                                  <a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--sidebar  govuk-link gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked" data-track-action="1.3 Related content" data-track-label="/energy-performance-certificate-commercial-property" data-track-options='{"dimension28":"3","dimension29":"Energy Performance Certificates for your business premises"}' href="/energy-performance-certificate-commercial-property">Energy Performance Certificates for your business premises</a>
+                              </li>
+
+                          </ul>
+                      </nav>
+
+                  </div>
+
+              </div>
+
+          </div>
+
+          <div class="govuk-grid-column-two-thirds">
+
+              <div class="gem-c-contextual-footer">
+
+                  <div class="gem-c-related-navigation">
+
+                      <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-topics-0c7113e4" data-module="gem-toggle">
+
+                          <h2 id="related-nav-topics-0c7113e4" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer" data-track-count="footerRelatedItemSection">Explore the topic</h2>
+
+                          <ul class="gem-c-related-navigation__link-list" data-module="gem-track-click">
+
+                              <li class="gem-c-related-navigation__link">
+                                  <a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--footer" data-track-category="relatedLinkClicked" data-track-action="1.1 Explore the topic" data-track-label="/browse/business/premises-rates" data-track-options='{"dimension28":"3","dimension29":"Business premises and business rates"}' href="/browse/business/premises-rates">Business premises and business rates</a>
+                              </li>
+                              <li class="gem-c-related-navigation__link">
+                                  <a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--footer" data-track-category="relatedLinkClicked" data-track-action="1.2 Explore the topic" data-track-label="/browse/housing-local-services/household-energy" data-track-options='{"dimension28":"3","dimension29":"Household energy"}' href="/browse/housing-local-services/household-energy">Household energy</a>
+                              </li>
+                              <li class="gem-c-related-navigation__link">
+                                  <a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--footer" data-track-category="relatedLinkClicked" data-track-action="1.3 Explore the topic" data-track-label="/browse/housing-local-services/owning-renting-property" data-track-options='{"dimension28":"3","dimension29":"Owning and renting a property"}' href="/browse/housing-local-services/owning-renting-property">Owning and renting a property</a>
+                              </li>
+
+                          </ul>
+                      </nav>
+
+                  </div>
+
+              </div>
+
+          </div>
+      </div>
   </main>
 </div>
 
